--- a/app/pantry/templates/pantry/base.html
+++ b/app/pantry/templates/pantry/base.html
@@ -13,15 +13,18 @@
     </header>
     {% block nav %}
     <nav class="navbar navbar-expand-sm bg-light justify-content-right">
-        <ul class="navbar-nav">
-            <li class="nav-item justify-content-right">
+        <ul class="navbar-nav pull-right">
+            <li class="nav-item">
                 <a class="nav-link" href="/pantry/">home</a>
             </li>
-            <li class="nav-item justify-content-right">
+            <li class="nav-item">
                 <a class="nav-link" href="#">view pantry</a>
             </li>
-            <li class="nav-item justify-content-right">
+            <li class="nav-item">
                 <a class="nav-link" href="/pantry/add/">add ingredient</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/pantry/logout">logout</a>
             </li>
         </ul>
 
